<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".contact2Activity">

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="48dp"
      android:text="@string/contact_name2"
      android:textSize="24sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView9"
      android:layout_width="0dp"
      android:layout_height="62dp"
      android:layout_marginStart="4dp"
      android:layout_marginTop="4dp"
      android:layout_marginEnd="28dp"
      android:text="@string/contact_address2"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/textView8"
      app:layout_constraintTop_toBottomOf="@+id/imageView" />

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="131dp"
      android:layout_height="397dp"
      android:layout_marginEnd="144dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/contact2img" />

  <TextView
      android:id="@+id/textView11"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="12dp"
      android:layout_marginTop="24dp"
      android:text="@string/contact_phone2"
      android:textSize="20sp"
      app:layout_constraintStart_toEndOf="@+id/textView10"
      app:layout_constraintTop_toBottomOf="@+id/textView9" />

  <TextView
      android:id="@+id/textView10"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="28dp"
      android:text="@string/phon_num_spec"
      android:textSize="20sp"
      app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/textView8"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="33dp"
      android:layout_marginEnd="4dp"
      android:text="@string/address_spec"
      android:textSize="20sp"
      app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
      app:layout_constraintEnd_toStartOf="@+id/textView9"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/textView13"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:text="@string/contact_email2"
      android:textSize="20sp"
      app:layout_constraintStart_toEndOf="@+id/textView12"
      app:layout_constraintTop_toBottomOf="@+id/textView11" />

  <TextView
      android:id="@+id/textView12"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="28dp"
      android:layout_marginTop="24dp"
      android:text="@string/email_spec"
      android:textSize="20sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView10" />

</androidx.constraintlayout.widget.ConstraintLayout>